[package]
name = "rapier-universe-benchmark"
version = "0.1.0"
authors = ["Cameron Reikes <cameronreikes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "*", features = [ "enhanced-determinism" ] }
raylib = "3.5"
