[package]
name = "rapier-universe-benchmark"
version = "0.1.0"
authors = ["Cameron Reikes <cameronreikes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d-f64 = { version = "0.7.2", features = [ "enhanced-determinism", "serde-serialize" ] }
raylib = "3.5"
serde = "1.0.125"
ron = "0.6.4"
